# Clean3D-as

./: .gitignore  README.md
CleanSample/src/: CleanSample_ColorTriangle.as  CleanSample_TextureQuad.as
CleanSample/src/async/: LoaderDeferred.as  ResFormat.as  whenOneArray.as
CleanSample/src/zips/: CRC32.as  Deflater.as  Inflater.as  ZipConstants.as  ZipEntry.as  ZipError.as  ZipFile.as  ZipOutput.as
CoreData/Shaders/GLSL/: LitSolid_PERPIXEL_DIRLIGHT_BILLBOARD_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_DIRLIGHT_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_DIRLIGHT_COMPILEVS_SM3.glsl.out  LitSolid_PERPIXEL_DIRLIGHT_INSTANCED_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_DIRLIGHT_SHADOW_BILLBOARD_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_DIRLIGHT_SHADOW_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_DIRLIGHT_SHADOW_INSTANCED_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_DIRLIGHT_SHADOW_SKINNED_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_DIRLIGHT_SKINNED_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_POINTLIGHT_BILLBOARD_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_POINTLIGHT_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_POINTLIGHT_INSTANCED_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_POINTLIGHT_SHADOW_BILLBOARD_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_POINTLIGHT_SHADOW_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_POINTLIGHT_SHADOW_INSTANCED_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_POINTLIGHT_SHADOW_SKINNED_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_POINTLIGHT_SKINNED_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_SPOTLIGHT_BILLBOARD_COMPILEVS_SM3.glsl  LitSolid_PERPIXEL_SPOTLIGHT_COMPILEVS_SM3.glsl  LitSolid_ps.glsl  (+7 more)
Flash3dLibCC/: Flash3dLib.abc  Flash3dLib.as3  Flash3dLib.swc  Flash3dLib.vcxproj  Flash3dLib.vcxproj.filters  Flash3dLibCC.sln  Flash3dLib_wrapper.c  Makefile  flash3dlib.c  flash3dlib.h  main.c  mathdefine.h  mk.bat  swig.i
glsl2agal/: CMakeLists.txt  Makefile  cmake_vs2008.bat
glsl2agal/src/glsl/: glsl_optimizer.cpp  glsl_parser_extras.h
glsl2agal/swc/: CMakeLists.txt
mojoshader_agal/: Makefile  main.c  mojoshader_agal.sln  mojoshader_agal.vcxproj  mojoshader_agal.vcxproj.filters  mojoshader_compiler.c  mojoshader_internal.h  mojoshaderlib.abc  mojoshaderlib.as3  mojoshaderlib.c  mojoshaderlib.h  mojoshaderlib.swc  mojoshaderlib_wrapper.c  swig.i
mojoshader_agal/Debug/: mojoshader_agal.ilk  vc120.idb
(+41 files in other folders)
